--- a/nginx.conf
+++ b/nginx.conf
@@ -1,6 +1,6 @@
 uwsgi_cache_path   /var/cache/nginx  levels= keys_zone=CACHE:10m inactive=1h max_size=500m;
 
-upstream uwsgicluster {
+upstream uwsgi_cluster{
 #   server unix:///tmp/uwsgi.sock;
     server 192.168.191.128:3032;
     server 192.168.191.133:3032;
@@ -9,7 +9,7 @@ upstream uwsgicluster {
 server {
 
   listen       80;
-  server_name  uwsgi_simple_app.loc
+  server_name  uwsgi_simple_app.loc;
 
 #  location ~* /((zh\-cn|es|ko|ru|fr|de|ja)/)?ewxamplepaths/(?!sweexamplepath2es/).* {
 #    try_files $uri @with_cache;
@@ -22,7 +22,7 @@ server {
      uwsgi_pass unix:////var/www/uwsgi_simple_app/src/tmp/uwsgi.sock;
 #    uwsgi_pass 192.168.191.133:3032;
 #    uwsgi_pass 127.0.0.1:3032;
-#    uwsgi_pass uwsgicluster;
+#    uwsgi_pass uwsgi_cluster;
   }
 
 
